# rust-mono

./: .prettierrc.json  Cargo.toml
crates/api/: Cargo.toml
crates/api/src/: main.rs
crates/api/src/routes/: mod.rs
crates/api/src/routes/auth/: login.rs  testing.rs
crates/core/: Cargo.toml
crates/core/src/: lib.rs
crates/core/src/auth/guards/: mod.rs
crates/core/src/impl/: database.rs  mod.rs
crates/core/src/impl/mongo/: mod.rs
crates/core/src/impl/mongo/conversation/: conversation.rs  message.rs
crates/core/src/impl/mongo/room/: room.rs
crates/core/src/impl/mongo/user/: user.rs
crates/core/src/middleware/: auth_middleware.rs
crates/core/src/models/: mod.rs
crates/core/src/models/conversations/: conversation.rs  message.rs
crates/core/src/models/rooms/: room.rs
crates/core/src/models/users/: user.rs
crates/core/src/traits/: mod.rs
crates/core/src/traits/conversation/: conversation.rs  message.rs
crates/core/src/traits/room/: room.rs
crates/core/src/traits/user/: user.rs
crates/core/src/utils/: environment.rs  mod.rs  result.rs  token_util.rs
src/: main.rs
src/db/: mod.rs
src/modules/: mod.rs
src/modules/room/: mod.rs
