[package]
name = "api"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
async-recursion = "1.1.1"
async-std = "1.13.0"
authifier = "1.0.8"
dotenv = "0.15.0"
futures = "0.3.31"
mongodb = "3.1.0"
nanoid = "0.4.0"
schemars = "0.8.21"
serde = { version = "1.0.211", features = ["derive"] }
serde_json = "1.0.132"
validator = "0.18.1"