[package]
name = "core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
schemars = "0.8.21"
async-recursion = "1.1.1"
async-std = "1.13.0"
authifier = "1.0.8"
dotenv = "0.15.0"
futures = "0.3.31"
mongodb = "3.1.0"
nanoid = "0.4.0"
serde = { version = "1.0.211", features = ["derive"] }
serde_json = "1.0.132"
validator = "0.18.1"
async-trait = "0.1.83"
actix-web = "4.9.0"
chrono = "0.4.38"


once_cell = "1.20.2"
bcrypt = "0.15.1"

# wrapping 
derive_more = "0.99.7"

# JWt
jsonwebtoken = "9.3.0"
